# manuals

./: .env  .gitignore  .gitmodules  README.md  TODO.md  justfile  pyproject.toml
distance/src/: spec.py
distance/src/hooks/: World.py
lib/world_spec/: __init__.py  item.py
manspect/: __main__.py
manual_kit/: __init__.py  _util.py  category.py  game.py  item.py  location.py  manspect.py  manual_data.py  options.py  requires.py  sampler.py  standalone.py  tables.py  world_spec.py
manual_kit/manspect/: Data.pyi  __init__.py  __main__.py  data_loader.template.py
manual_lib/world_spec/: location.py
manuals/distance/src/: spec.py
manuals/orange-juice/scripts/: build.py
manuals/orange-juice/src/: pool.py  spec.py  util.py
manuals/sound-voltex/: .gitignore
manuals/sound-voltex/scripts/: build.py  fetch_songs.py
manuals/sound-voltex/src/: Globals.py  navigators.py  songs.py
manuals/super-monkey-ball-2/scripts/: generate_world.py
manuals/super-monkey-ball-2/src/: spec.py
orange-juice/: .env.example  .gitignore  README.md
orange-juice/scripts/builder/: category.py  item.py  location.py  options.py
scripts/: build.py  manage.py  pull.py
scripts/lib/: constants.py  data_loader.py  manuals.py  paths.py
scripts/mkworld/: __init__.py  __main__.py
scripts/preview/: __main__.py
scripts/pull/: __main__.py
sound-voltex/: .editorconfig
src/: spec.py
src/data/: game.json  locations.json  options.json
src/hooks/: World.py
super-monkey-ball-2/: .gitignore
worlds/: __init__.py
worlds/distance/: __init__.py  __main__.py  build.py
(+49 files in other folders)
