[project]
name = "manuals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "bsdiff4>=1.2.6",
    "certifi>=2025.4.26",
    "colorama>=0.4.6",
    "cymem>=2.0.11",
    "cython>=3.0.12",
    "dataclasses-json>=0.6.7",
    "dotenv>=0.9.9",
    "gitpython>=3.1.44",
    "html5lib>=1.1",
    "jellyfish>=1.1.3",
    "jinja2>=3.1.6",
    "kivy>=2.3.1",
    "kivymd>=2.0.1.dev0",
    "orjson>=3.10.15",
    "pip>=25.1.1",
    "platformdirs>=4.3.6",
    "pyshortcuts>=1.9.1",
    "pyyaml>=6.0.2",
    "schema>=0.7.7",
    "tabulate>=0.9.0",
    "typed-argument-parser>=1.10.1",
    "typing-extensions>=4.12.2",
    "websockets>=13.0.1,<14",
]

[tool.uv.sources]
kivymd = { git = "https://github.com/kivymd/KivyMD", rev = "5ff9d0d" }
